syntax = "proto3";

import "v1/dto/context.proto";
import "v1/dto/item.proto";

package io.growing.tunnel.protocol;
option java_package = "io.growing.collector.tunnel.protocol";
option java_multiple_files = true;
option java_outer_classname = "EventProtocol";

message EventDto {
  string anonymous_id = 1;
  // required
  string project_key = 2;
  string user_id = 3;
  string gio_id = 4;
  // required
  int64 timestamp = 5;
  int32 esid = 6;
  string session = 7;
  // required
  string event_key = 8;
  // required
  EventType type = 9;
  // required
  string version = 10;
  string ip = 11;
  ContextDto context = 12;
  map<string, string> attributes = 13;
  int64 send_time = 14;
  double event_num = 15;
  enum EventType {
    VISIT = 0;
    CUSTOM_EVENT = 1;
    PAGE = 2;
    VISIT_CLOSE = 3;
  }
  string data_source_id = 16;
  ItemDto item = 17;
}

message EventList {
  repeated EventDto values = 1;
}